# eigenlog

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
examples/: client.rs  local_with_server.rs  remote_subscriber.rs  server.rs
src/: client.rs  db.rs  lib.rs  server.rs  subscriber.rs
src/db/: sled_impl.rs
src/storage/: sled_impl.rs
src/subscriber/: local.rs  remote.rs
xtask/: Cargo.toml  extra.rs  run.rs
