[package]
name = "eigenlog"
version = "0.1.0"
authors = ["Eric Sheppard <eric@sheppard.cloud>"]
edition = "2018"

[dependencies]
cfg-if = "1.0"
http = "0.2"
once_cell = "1.7"
regex = "1"
thiserror = "1"
uuid = "0.8"

[dependencies.bincode-crate]
version = "1.3"
package = "bincode"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.log]
version = "0.4"
features = ["serde", "std"]

[dependencies.futures]
version = "0.3"

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.sled]
version = "0.34"
optional = true 

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.ulid]
version = "0.4"
features = ["serde","uuid"]

[dependencies.warp]
version = "0.3"
optional = true

[dev-dependencies]
names = "0.11"
structopt = "0.3"
anyhow = "1"
serde_json = "1"
csv = "1"
comfy-table = "4"
strum = "0.21"
strum_macros = "0.21"
env_logger = "0.9"

[features]
json = ["serde_json", "reqwest/json"]
bincode = [ "bincode-crate" ]
client = ["reqwest", "bincode"]
remote-subscriber = ["reqwest"] # needs one of bincode or json
local-subscriber = ["sled", "bincode"]
server = ["sled", "warp", "bincode"]
# default = ["remote-subscriber", "bincode"]

# for dev
default = ["all"]
all = ["client", "server", "remote-subscriber", "local-subscriber", "json", "bincode"]


