[package]
name = "eigenlog"
version = "0.3.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
http = "0.2.6"
once_cell = "1.10.0"
regex = "1.5.4"
thiserror = "1.0.30"
uuid = "0.8.2"

[dependencies.async-trait]
version = "0.1.52"
optional = true 

[dependencies.bincode-crate]
version = "1.3.3"
package = "bincode"
optional = true

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.log]
version = "0.4.14"
features = ["serde", "std"]

[dependencies.futures]
version = "0.3.21"

[dependencies.reqwest]
version = "0.11.9"
optional = true

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.79"
optional = true

[dependencies.sled]
version = "0.34.7"
optional = true 

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.ulid]
version = "0.5.0"
features = ["serde","uuid"]

[dependencies.warp]
version = "0.3.2"
optional = true

[dev-dependencies]
names = "0.11"
structopt = "0.3"
anyhow = "1"
serde_json = "1"
csv = "1"
comfy-table = "4"
strum = "0.21"
strum_macros = "0.21"
env_logger = "0.9"

[features]
json = ["serde_json", "reqwest/json"]
bincode = [ "bincode-crate" ]
client = ["reqwest", "bincode", "async-trait"]
remote-subscriber = ["reqwest", "async-trait"] # needs one of bincode or json
local-subscriber = ["sled", "bincode"]
server = ["sled", "warp", "bincode"]
# default = ["remote-subscriber", "bincode"]

# for dev
default = ["all"]
all = ["client", "server", "remote-subscriber", "local-subscriber", "json", "bincode"]


