[package]
name = "eigenlog"
version = "0.3.0"
edition = "2021"

[[example]]
name = "client"
required-features = ["client", "bincode"]

[[example]]
name = "server"
required-features = ["server"]

[workspace]
members = ["xtask"]

[dependencies]
http = "0.2.6"
once_cell = "1.10.0"
regex = "1.5.4"
thiserror = "1.0.30"
uuid = "0.8.2"
futures-util = "0.3.21"
futures-channel = "0.3.21"

[dependencies.async-trait]
version = "0.1.52"
optional = true 

[dependencies.bincode-crate]
version = "1.3.3"
package = "bincode"
optional = true

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["serde"]

[dependencies.log]
version = "0.4.14"
features = ["serde", "std"]

[dependencies.reqwest]
version = "0.11.9"
features = ["rustls-tls"]
default-features = false
optional = true

[dependencies.url]
version = "2.2.2"
optional = true

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.79"
optional = true

[dependencies.sled]
version = "0.34.7"
optional = true 

[dependencies.ulid]
version = "0.5.0"
features = ["serde","uuid"]

[dependencies.warp]
version = "0.3.2"
default-features = false
optional = true

[dependencies.nebari]
version = "0.5.4"
optional = true 

[dependencies.rusqlite]
version = "0.27.0"
optional = true 

[dev-dependencies]
names = "0.11"
structopt = "0.3"
anyhow = "1"
serde_json = "1"
csv = "1"
comfy-table = "4"
strum = "0.21"
strum_macros = "0.21"
env_logger = "0.9"

[dev-dependencies.tokio]
version = "1.17.0"
features = ["full"]

[features]
json = ["serde_json", "reqwest/json"]
bincode = [ "bincode-crate" ]
client = ["reqwest", "async-trait", "url"]
remote-subscriber = ["reqwest", "async-trait", "url"] # needs one of bincode or json
local-subscriber = ["bincode"]
server = ["warp", "bincode"]
wasm = []
wasm-client = ["client", "wasm"]
wasm-subscriber = ["remote-subscriber", "wasm"]
default = []
all = ["client", "server", "remote-subscriber", "local-subscriber", "json", "bincode", "url", "sled", "nebari", "rusqlite"]


